--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <table>
             <thead>
                 <tr>
-                    <th>Graduation Date</th>
+                    <th>Degree</th>
                     <th>University and Program</th>
                 </tr>
             </thead>
@@ -44,42 +44,7 @@
                 <li>Mildren, R. L., Schmidt, M. E., <strong>Eschelmuller, G.,</strong>, Carpenter, M. G., Blouin, J., & Inglis, J. T. (2020). Influence of age on the frequency characteristics of the soleus muscle response to Achilles tendon vibration during standing. The Journal of Physiology, 598(22), 5231–5243. https://doi.org/10.1113/jp280324</li>
                 <li><strong>Eschelmuller, G.,</strong> Mildren, R. L., Blouin, J.-S., Carpenter, M. G., & Inglis, J. T. (2020). Frequency characteristics of heteronymous responses evoked by Achilles tendon vibration during quiet stance. Neuroscience Letters, 736, 135290. https://doi.org/10.1016/j.neulet.2020.135290</li>
             </ol>
-
-        <h3>Journal Articles - Under Review</h3>
-        <p>These are manuscripts that have been submitted and are currently under review at academic journals.</p>
-        <p>None Currently</p>
-
-        <h3>Journal Articles - In Preparation</h3>
-        <p>These are manuscripts that are in preparation for submission and will be submitted shortly.</p>
-        <p>None Currently</p>
-
-        <h3>Conference Presentations -Refereed</h3>
-        <p>These are oral presentations I have delivered at academic conferences.</p>
-        <ol>
-            <li>Eschelmuller, G., Mildren, R. L., Blouin, J. S., Carpenter, M. G., & Inglis, J. T. (2019). Heteronymous muscle responses to noisy achilles tendon vibration during standing. Journal of Exercise, Movement, and Sport (SCAPPS refereed abstracts repository), 51(1), 20-20.</li>
-        </ol>
-        <h3>Conference Abstracts - Refereed</h3>
-        <p>These include poster presentations I presented and poster and oral presentations I was listed as a co-author on.</p>
-        <ol>
-            <li>Eschelmuller, G., Gandossi, B., Szarka, A., Inglis, J.T., Chua, R. (2022). The effects of periodic and noisy tendon vibration during a proprioceptive targeting task. Journal of Exercise, Movement, and Sport (SCAPPS refereed abstracts repository)</li>
-            <li>Eschelmuller, G., Gandossi, G., Inglis, J.T., Ivry, R., Kim, H., Chua, R. (2022). Discrimination of visual-proprioceptive trajectories during passive movements with muscle vibration. Journal of Exercise, Movement, and Sport (SCAPPS refereed abstracts repository)</li>
-            <li>Szarka, A., Gandossi, B., Eschelmuller, G., Inglis, J.T., Ivry, R., Kim, H., Chua, R., (2022). Influence of muscle vibration on implicit sensorimotor adaptation. Journal of Exercise, Movement, and Sport (SCAPPS refereed abstracts repository)</li>
-            <li>Eschelmuller, G., Chua, R., Carpenter, M., & Inglis, J. T. (2021). The effects of periodic and noisy tendon vibration on wrist flexor stretch responses. Journal of Exercise, Movement, and Sport (SCAPPS refereed abstracts repository), 52(1)</li>
-            <li>Schmidt, M. E., Mildren, R. L., Eschelmuller, G., Carpenter, M. G., & Inglis, J. T. (2019). Age-related changes in soleus Ia reflex characteristics during quiet standing. Journal of Exercise, Movement, and Sport (SCAPPS refereed abstracts repository), 51(1), 58-58.</li>
-            <li>Eschelmuller G, Mildren R, Blouin J, Carpenter M, Inglis J. (2019). Frequency Characteristics of Heteronymous Achilles Tendon Reflexes During Quiet Stance. International Society for Posture and Gait Online. International Society for Posture and Gait World Congress, Edinburgh, United Kingdom</li>
-            <li>Mildren R, Eschelmuller G, Peters R, Blouin J, Carpenter M, Inglis J. (2019). Interaction Between Lower Limb Cutaneous and Muscle Afferent Pathways During Standing. International Society for Posture and Gait Online. International Society for Posture and Gait World Congress, Edinburgh, United Kingdom </li>
-            <li>Schmidt M, Mildren R, Eschelmuller G, Blouin J, Carpenter M, Inglis J. (2019). Changes in Achilles Tendon Reflex Strength During Quiet Standing with Age. International Society for Posture and Gait Online. International Society for Posture and Gait World Congress, Edinburgh, United Kingdom</li>
-            <li>Chua R, Grose G, Manzone D, Peters R, Eschelmuller G, Carpenter M, Inglis J. (2018). The Effects
-            of Exercise-Induced Fatigue and Eccentric Muscle Damage on Kinesthesia. International Society of Electrophysiology and Kinesiology Online. 22nd International Society of Electrophysiology and Kinesiology Congress, Dublin, Ireland </li>
-            <li>Eschelmuller G, Grose G, Manzone D, Peters R, Carpenter M, Inglis J, Chua R. (2018). The Effects
-            of Exercise-Induced Fatigue and Eccentric Muscle Damage on Kinesthesia. Canadian Association of Neuroscience Online. Canadian Association of Neuroscience 12th Annual Meeting, Vancouver, Canada</li>
-            <li>Mildren, R., Eschelmuller, G., Blouin, JS., Carpenter, M., Inglis, J. (2018). Foot Sole Cutaneous Signals Modulate Soleus Tendon Vibration Reflex Coupling During Standing. Canadian Association of Neuroscience Online. Canadian Association of Neuroscience 12th Annual Meeting, Vancouver, Canada,</li>
-        </ol>
-        <h3>Conference Presentations - Non-Refereed</h3>
-        <p>These presentations were at non-peer reviewed conferences.</p>
-        <ol>
-            <li>Eschelmuller G., & Mildren RL., Frequency Characteristics of Homonymous and Heteronymous Achilles Tendon Reflexes During Standing, Origins of Balance Deficits and Falls Research Cluster: Conference: Sensori-Motor Control of Balance & Movement: Animal and Humans Models, 2018</li>
-        </ol>
+            <p><a href="publications.html">Full publication list</a></strong></em></p>
         <h2>Teaching Acvitivites</h2 >
         <table>
             <p><strong>Teaching Assitant</strong></p>
