--- a/Contact_Info.html
+++ b/Contact_Info.html
@@ -5,8 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Me</title>
+    <link rel="stylesheet" href="/css/styles.css">
+
+
 </head>
 <body>
+    <table>
+        <tr>
+            <td><img src="images/gregg-modified.png" alt="gregg profile picture"></td>
+            <td>
+                <h1>Gregg Eschelmuller</h1>
+                <p><em>Phd Student at <strong><a href="https://www.ubc.ca/">UBC</a></strong></em></p>
+                <p> My research focuses on sensorimotor control and learning. Specifically, I study how the brain processes and learns from sensory information.</p>
+            </td>
+        </tr>
+    </table>
+        <table>
+        <tr>
+            <td><p><a href="index.html">Home</a>  ----  </p></td>
+            <td><p><a href="publications.html">Publications</a>  ----  </p></td>
+            <td><p><a href="Contact_Info.html">Contact Me!</a></p></td>
+        </tr>
+    </table>
+<hr>
     <h2>My Contact Information</h2>
     <ul>
         <li>Email: gregg.eschelmuller@ubc.ca; g.eschelmuller@gmail.com</li>
