--- a/publications.html
+++ b/publications.html
@@ -5,16 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Publications</title>
+    <link rel="stylesheet" href="/css/styles.css">
+
+
 </head>
 <body>
+    <table>
+        <tr>
+            <td><img src="images/gregg-modified.png" alt="gregg profile picture"></td>
+            <td>
+                <h1>Gregg Eschelmuller</h1>
+                <p><em>Phd Student at <strong><a href="https://www.ubc.ca/">UBC</a></strong></em></p>
+                <p> My research focuses on sensorimotor control and learning. Specifically, I study how the brain processes and learns from sensory information.</p>
+            </td>
+        </tr>
+    </table>
+        <table>
+        <tr>
+            <td><p><a href="index.html">Home</a>  ----  </p></td>
+            <td><p><a href="publications.html">Publications</a>  ----  </p></td>
+            <td><p><a href="Contact_Info.html">Contact Me!</a></p></td>
+        </tr>
+    </table>
+    <hr>
     <h2>Gregg Eschelmuller Publications</h2>
         <h3>Journal Articles - Published</h3>
         <p>These are published or in press, peer-reviewed, academic papers</p>
             <ol>
                 <li>Grose, G., Manzone, D., <strong>Eschelmuller, G.,</strong>, Peters, R., Carpenter, M.G.., Inglis, J.T., Chua, R. The effects of eccentric exercise-induced fatigue on position sense during goal-directed movement., In press Journal of Applied Physiology, https://doi.org/10.1152/japplphysiol.00177.2021</li>
                 <li><strong>Eschelmuller, G.,</strong>, Chua, R., Carpenter, M. G., & Inglis, J. T. (2021). The acute effects of periodic and noisy tendon vibration on wrist muscle stretch responses. Neuroscience Letters, 764, 136279. https://doi.org/10.1016/j.neulet.2021.136279 </li>
-                <li>Mildren, R. L., Schmidt, M. E., <strong>Eschelmuller, G.,</strong>, Carpenter, M. G., Blouin, J., & Inglis, J. T. (2020). Influence of age on the frequency characteristics of the soleus muscle response to Achilles tendon vibration during standing. The Journal of Physiology, 598(22), 5231–5243. https://doi.org/10.1113/jp280324</li>
-                <li><strong>Eschelmuller, G.,</strong> Mildren, R. L., Blouin, J.-S., Carpenter, M. G., & Inglis, J. T. (2020). Frequency characteristics of heteronymous responses evoked by Achilles tendon vibration during quiet stance. Neuroscience Letters, 736, 135290. https://doi.org/10.1016/j.neulet.2020.135290</li>
+                <li>Mildren, R. L., Schmidt, M. E., <strong>Eschelmuller, G.,</strong>, Carpenter, M. G., Blouin, J., & Inglis, J. T. (2020). Influence of age on the frequency characteristics of the soleus muscle response to Achilles tendon vibration during standing. The Journal of Physiology, 598(22), 5231-5243. https://doi.org/10.1113/jp280324</li>
+                <li><strong>Eschelmuller, G.,</strong> Mildren, R. L., Blouin, J.-S., Carpenter, M. G., & Inglis, J. T. (2020). Frequency characteristics of heteronymous responses evoked by Achilles tendon vibration during quiet stance. Neuroscience Letters,736, 135290. https://doi.org/10.1016/j.neulet.2020.135290</li>
             </ol>
 
         <h3>Journal Articles - Under Review</h3>
