Re-organized layout

--- a/Contact_Info.html
+++ b/Contact_Info.html
@@ -23,7 +23,7 @@
         <table>
         <tr>
             <td><p><a href="index.html">Home</a>  ----  </p></td>
-            <td><p><a href="publications.html">Publications</a>  ----  </p></td>
+            <td><p><a href="cv.html">CV</a>  ----  </p></td>
             <td><p><a href="Contact_Info.html">Contact Me!</a></p></td>
         </tr>
     </table>
