--- a/index.html
+++ b/index.html
@@ -15,78 +15,27 @@
                 <td>
                     <h1>Gregg Eschelmuller</h1>
                     <p><em>Phd Student at <strong><a href="https://www.ubc.ca/">UBC</a></strong></em></p>
-                    <p> My research focuses on sensorimotor control and learning. Specifically, I study how the brain processes and learns from sensory information.</p>
                 </td>
             </tr>
         </table>
         <table>
             <tr>
                 <td><p><a href="index.html">Home</a>  ----  </p></td>
-                <td><p><a href="publications.html">Publications</a>  ----  </p></td>
+                <td><p><a href="cv.html">CV</a>  ----  </p></td>
                 <td><p><a href="Contact_Info.html">Contact Me!</a></p></td>
             </tr>
         </table>
-        <hr>
-        <h2>Education</h2>
-        <table>
-            <thead>
-                <tr>
-                    <th>Degree</th>
-                    <th>University and Program</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>PhD: Current</td>
-                    <td>University of British Columbia - Kinesiology (Neuromechanics)</td>
-                </tr>
-                <tr>
-                    <td>MSc: 2021</td>
-                    <td>University of British Columbia - Kinesiology (Neuromechanics)</td>
-                </tr>
-                <tr>
-                    <td>BKin: 2018</td>
-                    <td>University of British Columbia - Kinesiology and Health Sciences</td>
-                </tr>
-            </tbody>
-        </table>
+    <hr>
+    <h2>About Me</h2>
+        <p> Hi! I'm Gregg, I am a Phd student at the University of British Columbia. I am interested in how the nervous systems controls movement. I am working in the human neurophysiology lab and the perceptual motor dynamics lab. My research focuses on sensorimotor control and learning, specifically, I am interested in how the brain processes and learns from sensory information. One area of interest I have is how the brain builds predictions and using sesnory predictions erros to guide learning and sensorimotor adaptation. Check out my <a href="cv.html">CV</a> to learn more about my background and research!</p>
+    
+    <h2>Recent Publications</h2>
+    <ol>
+        <li>Grose, G., Manzone, D., <strong>Eschelmuller, G.,</strong>, Peters, R., Carpenter, M.G.., Inglis, J.T., Chua, R. The effects of eccentric exercise-induced fatigue on position sense during goal-directed movement., In press Journal of Applied Physiology, https://doi.org/10.1152/japplphysiol.00177.2021</li>
+        <li><strong>Eschelmuller, G.,</strong>, Chua, R., Carpenter, M. G., & Inglis, J. T. (2021). The acute effects of periodic and noisy tendon vibration on wrist muscle stretch responses. Neuroscience Letters, 764, 136279. https://doi.org/10.1016/j.neulet.2021.136279 </li>
+        <li>Mildren, R. L., Schmidt, M. E., <strong>Eschelmuller, G.,</strong>, Carpenter, M. G., Blouin, J., & Inglis, J. T. (2020). Influence of age on the frequency characteristics of the soleus muscle response to Achilles tendon vibration during standing. The Journal of Physiology, 598(22), 5231-5243. https://doi.org/10.1113/jp280324</li>
+        <li><strong>Eschelmuller, G.,</strong> Mildren, R. L., Blouin, J.-S., Carpenter, M. G., & Inglis, J. T. (2020). Frequency characteristics of heteronymous responses evoked by Achilles tendon vibration during quiet stance. Neuroscience Letters,736, 135290. https://doi.org/10.1016/j.neulet.2020.135290</li>
+    </ol>
 
-        <h2>Publications</h2>
-        <h3>Journal Articles - Published</h3>
-        <p>These are published or in press, peer-reviewed, academic papers</p>
-            <ol>
-                <li>Grose, G., Manzone, D., <strong>Eschelmuller, G.,</strong>, Peters, R., Carpenter, M.G.., Inglis, J.T., Chua, R. The effects of eccentric exercise-induced fatigue on position sense during goal-directed movement., In press Journal of Applied Physiology, https://doi.org/10.1152/japplphysiol.00177.2021</li>
-                <li><strong>Eschelmuller, G.,</strong>, Chua, R., Carpenter, M. G., & Inglis, J. T. (2021). The acute effects of periodic and noisy tendon vibration on wrist muscle stretch responses. Neuroscience Letters, 764, 136279. https://doi.org/10.1016/j.neulet.2021.136279 </li>
-                <li>Mildren, R. L., Schmidt, M. E., <strong>Eschelmuller, G.,</strong>, Carpenter, M. G., Blouin, J., & Inglis, J. T. (2020). Influence of age on the frequency characteristics of the soleus muscle response to Achilles tendon vibration during standing. The Journal of Physiology, 598(22), 5231-5243. https://doi.org/10.1113/jp280324</li>
-                <li><strong>Eschelmuller, G.,</strong> Mildren, R. L., Blouin, J.-S., Carpenter, M. G., & Inglis, J. T. (2020). Frequency characteristics of heteronymous responses evoked by Achilles tendon vibration during quiet stance. Neuroscience Letters, 736, 135290. https://doi.org/10.1016/j.neulet.2020.135290</li>
-            </ol>
-            <p><a href="publications.html">Full publication list</a></strong></em></p>
-        <h2>Teaching Acvitivites</h2 >
-        <table>
-            <p><strong>Teaching Assitant</strong></p>
-            <tbody>
-                <tr>
-                    <td>Kin 313 (389)</td>
-                    <td>Neuromuscular Integration of Human Movement (3x)</td>
-                </tr>
-                <tr>
-                    <td>Kin 419 (357)</td>
-                    <td>Laboratory Investigations in Neuromechanical Kinesiology (2x)</td>
-                </tr>
-                <tr>
-                    <td>Kin 411</td>
-                    <td>Neuroanatomy of Human Movement (1x)</td>
-                </tr>
-                <tr>
-                    <td>Kin 131</td>
-                    <td>Systems Physiology I (1x)</td>
-                </tr>
-                <tr>
-                    <td>Kin 191</td>
-                    <td>Anatomy and Physiology II (1x)</td>
-                </tr>
-            </tbody>
-        </table>
-        <p><a href="Contact_Info.html">Contact Me</a></strong></em></p>
     </body>
 </html>
