Added new links and fixed headers

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </table>
     <hr>
     <h2>About Me</h2>
-        <p> Hi! I'm Gregg, I am a Phd student at the University of British Columbia. I am interested in how the nervous systems controls movement. I am working in the human neurophysiology lab and the perceptual motor dynamics lab. My research focuses on sensorimotor control and learning, specifically, I am interested in how the brain processes and learns from sensory information. One area of interest I have is how the brain builds predictions and using sesnory predictions erros to guide learning and sensorimotor adaptation. Check out my <a href="cv.html">CV</a> to learn more about my background and research!</p>
+        <p> Hi! I'm Gregg, I am a Phd student at the University of British Columbia. I am interested in how the nervous systems controls movement. I am working in the <a href="https://kin.educ.ubc.ca/research/neuro-mechanical/human-neurophysiology-lab/">human neurophysiology lab</a> and the <a href="https://kin.educ.ubc.ca/research/neuro-mechanical/perceptual-motor-dynamics-lab/">perceptual motor dynamics lab</a>. My research focuses on sensorimotor control and learning, specifically, I am interested in how the brain processes and learns from sensory information. One area of interest I have is how the brain builds predictions and using sesnory predictions erros to guide learning and sensorimotor adaptation. Check out my <a href="cv.html">CV</a> to learn more about my background and research!</p>
     
     <h2>Recent Publications</h2>
     <ol>
