--- a/cv.html
+++ b/cv.html
@@ -15,7 +15,7 @@
             <td><img src="images/gregg-modified.png" alt="gregg profile picture"></td>
             <td>
                 <h1>Gregg Eschelmuller</h1>
-                <p><em>Phd Student at <strong><a href="https://www.ubc.ca/">UBC</a></strong></em></p>
+                <p><em>Phd Student at UBC</em></p>
             </td>
         </tr>
     </table>
