updated css and minor changes

--- a/Contact_Info.html
+++ b/Contact_Info.html
@@ -26,7 +26,11 @@
             <td><p><a href="Contact_Info.html">Contact Me!</a></p></td>
         </tr>
     </table>
-<hr>
+<hr style="border-style: none;
+border-top-style: dotted;
+border-color: #3A8891;
+border-width: 5px;
+width: 100%;">
     <h2>My Contact Information</h2>
     <ul>
         <li>Email: gregg.eschelmuller@ubc.ca; g.eschelmuller@gmail.com</li>
