--- a/index.html
+++ b/index.html
@@ -25,10 +25,14 @@
                 <td><p><a href="Contact_Info.html">Contact Me!</a></p></td>
             </tr>
         </table>
-    <hr>
+    <hr style="border-style: none;
+    border-top-style: dotted;
+    border-color: #3A8891;
+    border-width: 5px;
+    width: 100%;">
     <h2>About Me</h2>
         <p> Hi! My name is Gregg and I am a Phd student at the University of British Columbia. I am interested in how the nervous systems controls movement. I am working in the <a href="https://kin.educ.ubc.ca/research/neuro-mechanical/human-neurophysiology-lab/">human neurophysiology lab</a> and the <a href="https://kin.educ.ubc.ca/research/neuro-mechanical/perceptual-motor-dynamics-lab/">perceptual motor dynamics lab</a>. My research focuses on sensorimotor control and learning, specifically, I am interested in how the brain processes and learns from sensory information. Check out my <a href="cv.html">CV</a> to learn more about my background and research!</p>
-    
+    <hr>
     <h2>Recent Publications</h2>
     <ol>
         <li>Grose, G., Manzone, D., <strong>Eschelmuller, G.,</strong>, Peters, R., Carpenter, M.G.., Inglis, J.T., Chua, R. The effects of eccentric exercise-induced fatigue on position sense during goal-directed movement., In press Journal of Applied Physiology, https://doi.org/10.1152/japplphysiol.00177.2021</li>
