--- a/cv.html
+++ b/cv.html
@@ -26,7 +26,11 @@
             <td><p><a href="Contact_Info.html">Contact Me!</a></p></td>
         </tr>
     </table>
-    <hr>
+    <hr style="border-style: none;
+    border-top-style: dotted;
+    border-color: #3A8891;
+    border-width: 5px;
+    width: 100%;">
     <h2>Education</h2>
     <table>
         <thead>
@@ -50,11 +54,12 @@
             </tr>
         </tbody>
     </table>
+    <hr>
     <h2>Publications</h2>
         <h3>Journal Articles - Published</h3>
         <p>These are published or in press, peer-reviewed, academic papers</p>
             <ol>
-                <li>Grose, G., Manzone, D., <strong>Eschelmuller, G.,</strong>, Peters, R., Carpenter, M.G.., Inglis, J.T., Chua, R. The effects of eccentric exercise-induced fatigue on position sense during goal-directed movement., In press Journal of Applied Physiology, https://doi.org/10.1152/japplphysiol.00177.2021</li>
+                <li>Grose, G., Manzone, D. M., <strong>Eschelmuller, G.,</strong> Peters, R. M., Carpenter, M. G., Inglis, J. T., & Chua, R. (2022). The effects of eccentric exercise-induced fatigue on position sense during goal-directed movement. Journal of Applied Physiology, 132(4), 1005-1019.</li>
                 <li><strong>Eschelmuller, G.,</strong>, Chua, R., Carpenter, M. G., & Inglis, J. T. (2021). The acute effects of periodic and noisy tendon vibration on wrist muscle stretch responses. Neuroscience Letters, 764, 136279. https://doi.org/10.1016/j.neulet.2021.136279 </li>
                 <li>Mildren, R. L., Schmidt, M. E., <strong>Eschelmuller, G.,</strong>, Carpenter, M. G., Blouin, J., & Inglis, J. T. (2020). Influence of age on the frequency characteristics of the soleus muscle response to Achilles tendon vibration during standing. The Journal of Physiology, 598(22), 5231-5243. https://doi.org/10.1113/jp280324</li>
                 <li><strong>Eschelmuller, G.,</strong> Mildren, R. L., Blouin, J.-S., Carpenter, M. G., & Inglis, J. T. (2020). Frequency characteristics of heteronymous responses evoked by Achilles tendon vibration during quiet stance. Neuroscience Letters,736, 135290. https://doi.org/10.1016/j.neulet.2020.135290</li>
@@ -95,6 +100,7 @@
         <ol>
             <li>Eschelmuller G., & Mildren RL., Frequency Characteristics of Homonymous and Heteronymous Achilles Tendon Reflexes During Standing, Origins of Balance Deficits and Falls Research Cluster: Conference: Sensori-Motor Control of Balance & Movement: Animal and Humans Models, 2018</li>
         </ol>
+        <hr>
         <h2>Teaching Acvitivites</h2 >
             <table>
                 <p><strong>Teaching Assitant</strong></p>
