--- a/Contact_Info.html
+++ b/Contact_Info.html
@@ -15,7 +15,7 @@
             <td><img src="images/gregg-modified.png" alt="gregg profile picture"></td>
             <td>
                 <h1>Gregg Eschelmuller</h1>
-                <p><em>Phd Student at UBC</em></p>
+                <p><em>Phd Student at the University of British Columbia</em></p>
             </td>
         </tr>
     </table>
