--- a/cv.html
+++ b/cv.html
@@ -2,130 +2,149 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV</title>
+    <title>Gregg Eschelmuller - CV</title>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
-
-
+    <style>
+        .cv-section {
+            margin-bottom: 30px;
+        }
+        .cv-section h2 {
+            color: #2c3e50;
+            border-bottom: 2px solid #3498db;
+            padding-bottom: 10px;
+        }
+        .award-item, .publication-item {
+            margin-bottom: 15px;
+        }
+        .award-item strong, .publication-item strong {
+            font-weight: 700;
+        }
+    </style>
 </head>
 <body>
-    <table>
-        <tr>
-            <td><img src="images/gregg-modified.png" alt="gregg profile picture"></td>
-            <td>
-                <h1>Gregg Eschelmuller</h1>
-                <p><em>Phd Student at the University of British Columbia</em></p>
-            </td>
-        </tr>
-    </table>
-        <table>
-        <tr>
-            <td><p><a href="index.html">Home</a>  ----  </p></td>
-            <td><p><a href="cv.html">CV</a>  ----  </p></td>
-            <td><p><a href="Contact_Info.html">Contact Me!</a></p></td>
-        </tr>
-    </table>
-    <hr style="border-style: none;
-    border-top-style: dotted;
-    border-color: #3A8891;
-    border-width: 5px;
-    width: 100%;">
-    <h2>Education</h2>
-    <table>
-        <thead>
-            <tr>
-                <th>Degree</th>
-                <th>University and Program</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>PhD: Current</td>
-                <td>University of British Columbia - Kinesiology (Neuromechanics)</td>
-            </tr>
-            <tr>
-                <td>MSc: 2021</td>
-                <td>University of British Columbia - Kinesiology (Neuromechanics)</td>
-            </tr>
-            <tr>
-                <td>BKin: 2018</td>
-                <td>University of British Columbia - Kinesiology and Health Sciences</td>
-            </tr>
-        </tbody>
-    </table>
-    <hr>
-    <h2>Publications</h2>
-        <h3>Journal Articles - Published</h3>
-        <p>These are published or in press, peer-reviewed, academic papers</p>
-            <ol>
-                <li>Grose, G., Manzone, D. M., <strong>Eschelmuller, G.,</strong> Peters, R. M., Carpenter, M. G., Inglis, J. T., & Chua, R. (2022). The effects of eccentric exercise-induced fatigue on position sense during goal-directed movement. Journal of Applied Physiology, 132(4), 1005-1019.</li>
-                <li><strong>Eschelmuller, G.,</strong>, Chua, R., Carpenter, M. G., & Inglis, J. T. (2021). The acute effects of periodic and noisy tendon vibration on wrist muscle stretch responses. Neuroscience Letters, 764, 136279. https://doi.org/10.1016/j.neulet.2021.136279 </li>
-                <li>Mildren, R. L., Schmidt, M. E., <strong>Eschelmuller, G.,</strong>, Carpenter, M. G., Blouin, J., & Inglis, J. T. (2020). Influence of age on the frequency characteristics of the soleus muscle response to Achilles tendon vibration during standing. The Journal of Physiology, 598(22), 5231-5243. https://doi.org/10.1113/jp280324</li>
-                <li><strong>Eschelmuller, G.,</strong> Mildren, R. L., Blouin, J.-S., Carpenter, M. G., & Inglis, J. T. (2020). Frequency characteristics of heteronymous responses evoked by Achilles tendon vibration during quiet stance. Neuroscience Letters,736, 135290. https://doi.org/10.1016/j.neulet.2020.135290</li>
-            </ol>
+    <header>
+        <div class="container">
+            <h1>Gregg Eschelmuller</h1>
+            <p>PhD Student at the University of British Columbia</p>
+        </div>
+    </header>
 
-        <h3>Journal Articles - Under Review</h3>
-        <p>These are manuscripts that have been submitted and are currently under review at academic journals.</p>
-        <p>None Currently</p>
+    <nav>
+        <div class="container">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="cv.html">CV</a></li>
+                <li><a href="Contact_Info.html">Contact Me!</a></li>
+            </ul>
+        </div>
+    </nav>
 
-        <h3>Journal Articles - In Preparation</h3>
-        <p>These are manuscripts that are in preparation for submission and will be submitted shortly.</p>
-        <p>None Currently</p>
+    <main class="container">
+        <h1>Curriculum Vitae</h1>
+        
+        <section class="cv-section">
+            <h2>Contact Information</h2>
+            <p>Email: <a href="mailto:gregg.eschelmuller@ubc.ca">gregg.eschelmuller@ubc.ca</a></p>
+            <p>University of British Columbia | Vancouver Campus</p>
+            <p>Human Neurophysiology Lab | Perceptual Motor Dynamics Lab</p>
+        </section>
 
-        <h3>Conference Presentations -Refereed</h3>
-        <p>These are oral presentations I have delivered at academic conferences.</p>
-        <ol>
-            <li>Eschelmuller, G., Mildren, R. L., Blouin, J. S., Carpenter, M. G., & Inglis, J. T. (2019). Heteronymous muscle responses to noisy achilles tendon vibration during standing. Journal of Exercise, Movement, and Sport (SCAPPS refereed abstracts repository), 51(1), 20-20.</li>
-        </ol>
-        <h3>Conference Abstracts - Refereed</h3>
-        <p>These include poster presentations I presented and poster and oral presentations I was listed as a co-author on.</p>
-        <ol>
-            <li>Eschelmuller, G., Gandossi, B., Szarka, A., Inglis, J.T., Chua, R. (2022). The effects of periodic and noisy tendon vibration during a proprioceptive targeting task. Journal of Exercise, Movement, and Sport (SCAPPS refereed abstracts repository)</li>
-            <li>Eschelmuller, G., Gandossi, G., Inglis, J.T., Ivry, R., Kim, H., Chua, R. (2022). Discrimination of visual-proprioceptive trajectories during passive movements with muscle vibration. Journal of Exercise, Movement, and Sport (SCAPPS refereed abstracts repository)</li>
-            <li>Szarka, A., Gandossi, B., Eschelmuller, G., Inglis, J.T., Ivry, R., Kim, H., Chua, R., (2022). Influence of muscle vibration on implicit sensorimotor adaptation. Journal of Exercise, Movement, and Sport (SCAPPS refereed abstracts repository)</li>
-            <li>Eschelmuller, G., Chua, R., Carpenter, M., & Inglis, J. T. (2021). The effects of periodic and noisy tendon vibration on wrist flexor stretch responses. Journal of Exercise, Movement, and Sport (SCAPPS refereed abstracts repository), 52(1)</li>
-            <li>Schmidt, M. E., Mildren, R. L., Eschelmuller, G., Carpenter, M. G., & Inglis, J. T. (2019). Age-related changes in soleus Ia reflex characteristics during quiet standing. Journal of Exercise, Movement, and Sport (SCAPPS refereed abstracts repository), 51(1), 58-58.</li>
-            <li>Eschelmuller G, Mildren R, Blouin J, Carpenter M, Inglis J. (2019). Frequency Characteristics of Heteronymous Achilles Tendon Reflexes During Quiet Stance. International Society for Posture and Gait Online. International Society for Posture and Gait World Congress, Edinburgh, United Kingdom</li>
-            <li>Mildren R, Eschelmuller G, Peters R, Blouin J, Carpenter M, Inglis J. (2019). Interaction Between Lower Limb Cutaneous and Muscle Afferent Pathways During Standing. International Society for Posture and Gait Online. International Society for Posture and Gait World Congress, Edinburgh, United Kingdom </li>
-            <li>Schmidt M, Mildren R, Eschelmuller G, Blouin J, Carpenter M, Inglis J. (2019). Changes in Achilles Tendon Reflex Strength During Quiet Standing with Age. International Society for Posture and Gait Online. International Society for Posture and Gait World Congress, Edinburgh, United Kingdom</li>
-            <li>Chua R, Grose G, Manzone D, Peters R, Eschelmuller G, Carpenter M, Inglis J. (2018). The Effects
-            of Exercise-Induced Fatigue and Eccentric Muscle Damage on Kinesthesia. International Society of Electrophysiology and Kinesiology Online. 22nd International Society of Electrophysiology and Kinesiology Congress, Dublin, Ireland </li>
-            <li>Eschelmuller G, Grose G, Manzone D, Peters R, Carpenter M, Inglis J, Chua R. (2018). The Effects
-            of Exercise-Induced Fatigue and Eccentric Muscle Damage on Kinesthesia. Canadian Association of Neuroscience Online. Canadian Association of Neuroscience 12th Annual Meeting, Vancouver, Canada</li>
-            <li>Mildren, R., Eschelmuller, G., Blouin, JS., Carpenter, M., Inglis, J. (2018). Foot Sole Cutaneous Signals Modulate Soleus Tendon Vibration Reflex Coupling During Standing. Canadian Association of Neuroscience Online. Canadian Association of Neuroscience 12th Annual Meeting, Vancouver, Canada,</li>
-        </ol>
-        <h3>Conference Presentations - Non-Refereed</h3>
-        <p>These presentations were at non-peer reviewed conferences.</p>
-        <ol>
-            <li>Eschelmuller G., & Mildren RL., Frequency Characteristics of Homonymous and Heteronymous Achilles Tendon Reflexes During Standing, Origins of Balance Deficits and Falls Research Cluster: Conference: Sensori-Motor Control of Balance & Movement: Animal and Humans Models, 2018</li>
-        </ol>
-        <hr>
-        <h2>Teaching Acvitivites</h2 >
-            <table>
-                <p><strong>Teaching Assitant</strong></p>
-                <tbody>
-                    <tr>
-                        <td>Kin 313 (389)</td>
-                        <td>Neuromuscular Integration of Human Movement (3x)</td>
-                    </tr>
-                    <tr>
-                        <td>Kin 419 (357)</td>
-                        <td>Laboratory Investigations in Neuromechanical Kinesiology (2x)</td>
-                    </tr>
-                    <tr>
-                        <td>Kin 411</td>
-                        <td>Neuroanatomy of Human Movement (1x)</td>
-                    </tr>
-                    <tr>
-                        <td>Kin 131</td>
-                        <td>Systems Physiology I (1x)</td>
-                    </tr>
-                    <tr>
-                        <td>Kin 191</td>
-                        <td>Anatomy and Physiology II (1x)</td>
-                    </tr>
-                </tbody>
-            </table>
+        <section class="cv-section">
+            <h2>Education</h2>
+            <ul>
+                <li><strong>Current:</strong> PhD Student, Kinesiology (Neuromechanics), University of British Columbia</li>
+                <li><strong>2021:</strong> M.Sc., Kinesiology (Neuromechanics), University of British Columbia</li>
+                <li><strong>2018:</strong> B.Kin., Kinesiology and Health Sciences, University of British Columbia</li>
+                <li><strong>2016:</strong> Diploma, Human Kinetics (Exercise Science), Capilano University</li>
+            </ul>
+        </section>
+
+        <section class="cv-section">
+            <h2>Publications</h2>
+            <h3>Journal Articles - Published</h3>
+            <div class="publication-item">
+                <strong>Eschelmuller, G</strong>., Szarka, A., Gandossi, B., Inglis, J. T., & Chua, R. (2023). The effects of periodic and noisy tendon vibration on a kinesthetic targeting task. Experimental Brain Research. <a href="https://doi.org/10.1007/s00221-023-06727-1">https://doi.org/10.1007/s00221-023-06727-1</a>
+            </div>
+            <div class="publication-item">
+                Grose, G., Manzone, D., <strong>Eschelmuller, G.</strong>, Peters, R., Carpenter, M.G., Inglis, J.T., Chua, R. (2022). The effects of eccentric exercise-induced fatigue on position sense during goal-directed movement. Journal of Applied Physiology, 132(4), 1005-1019. <a href="https://doi.org/10.1152/japplphysiol.00177.2021">https://doi.org/10.1152/japplphysiol.00177.2021</a>
+            </div>
+            <div class="publication-item">
+                <strong>Eschelmuller, G</strong>., Chua, R., Carpenter, M. G., & Inglis, J. T. (2021). The acute effects of periodic and noisy tendon vibration on wrist muscle stretch responses. Neuroscience Letters, 764, 136279. <a href="https://doi.org/10.1016/j.neulet.2021.136279">https://doi.org/10.1016/j.neulet.2021.136279</a>
+            </div>
+            <div class="publication-item">
+                <strong>Eschelmuller, G.</strong>, Mildren, R. L., Blouin, J.-S., Carpenter, M. G., & Inglis, J. T. (2020). Frequency characteristics of heteronymous responses evoked by Achilles tendon vibration during quiet stance. Neuroscience Letters, 736, 135290. <a href="https://doi.org/10.1016/j.neulet.2020.135290">https://doi.org/10.1016/j.neulet.2020.135290</a>
+            </div>
+            <div class="publication-item">
+                Mildren, R. L., Schmidt, M. E., <strong>Eschelmuller, G.</strong>, Carpenter, M. G., Blouin, J., & Inglis, J. T. (2020). Influence of age on the frequency characteristics of the soleus muscle response to Achilles tendon vibration during standing. The Journal of Physiology, 598(22), 5231-5243. <a href="https://doi.org/10.1113/jp280324">https://doi.org/10.1113/jp280324</a>
+            </div>
+            
+            <h3>Journal Articles - In Preparation</h3>
+            <div class="publication-item">
+                <strong>Eschelmuller, G</strong>., Szarka, A., Inglis, J. Timothy., Chua, R., (in preparation). Investigating explicit and implicit sensorimotor adaptation in a bimanual aiming task.
+            </div>
+            <div class="publication-item">
+                <strong>Eschelmuller, G</strong>., Szarka, A., Gandossi, B., Inglis, J. Timothy., Chua, R., (in preparation). Agonist/antagonist muscle tendon vibration improves performance in a visual-proprioceptive discrimination task during active but not passive movements.
+            </div>
+        </section>
+
+        <section class="cv-section">
+            <h2>Awards</h2>
+            <div class="award-item">
+                <strong>Natural Sciences and Engineering Research Council Canadian Graduate Scholarship - Doctoral</strong>
+                <p>Value: $105,000 over three years | Year: 2022-2025</p>
+            </div>
+            <div class="award-item">
+                <strong>Killam Doctoral Scholarship</strong>
+                <p>Value: $60,000 over two years (Accepted as $0 due to NSERC) | Year: 2022-2024</p>
+            </div>
+            <div class="award-item">
+                <strong>UBC Four Year Fellowship</strong>
+                <p>Value: $72,800 over four years (Accepted as $0 due to NSERC) | Year: 2022-2026</p>
+            </div>
+            <div class="award-item">
+                <strong>Faculty of Education Graduate Award</strong>
+                <p>Value: $5000 | Year: 2022</p>
+            </div>
+            <div class="award-item">
+                <strong>Presidents Academic Excellence Initiative PhD Award</strong>
+                <p>Value: $1860 | Year: 2022</p>
+            </div>
+            <div class="award-item">
+                <strong>Natural Sciences and Engineering Research Council Canadian Graduate Scholarship - Masters</strong>
+                <p>Value: $17,500 | Year: 2019</p>
+            </div>
+            <div class="award-item">
+                <strong>Faculty of Education Graduate Award</strong>
+                <p>Value: $4000 | Year: 2018</p>
+            </div>
+        </section>
+
+        <section class="cv-section">
+            <h2>Teaching Experience</h2>
+            <p><strong>Teaching Assistant:</strong></p>
+            <ul>
+                <li>KIN 411: Neuroanatomy of Human Movement (1x)</li>
+                <li>KIN 313 (389): Neuromuscular Integration of Human Movement (4x)</li>
+                <li>KIN 131: Systems Physiology II (1x)</li>
+                <li>KIN 419 (357): Laboratory Investigations in Neuromechanical Kinesiology (3x)</li>
+                <li>KIN 190: Anatomy & Physiology I (1x)</li>
+                <li>KIN 335: Advance Applications of Exercise Physiology (1x)</li>
+            </ul>
+        </section>
+
+        <section class="cv-section">
+            <h2>Technical Skills</h2>
+            <p><strong>Programming languages:</strong> MATLAB, Python</p>
+            <p><strong>Data collection:</strong> Proficient in various data collection and experimental techniques used in motor control and human neurophysiology research, including electromyography, force transducers, accelerometers, and force plates. Proficient in data collection software Spike2 from Cambridge Electronics Design.</p>
+        </section>
+    </main>
+
+    <footer>
+        <div class="container">
+            <p>&copy; 2023 Gregg Eschelmuller. All rights reserved.</p>
+        </div>
+    </footer>
 </body>
 </html>
