update about me

--- a/index.html
+++ b/index.html
@@ -44,10 +44,9 @@
     <main class="container">
         <section class="profile">
             <img src="images/gregg-modified.png" alt="Gregg Eschelmuller profile picture" class="profile-image">
-            <div>
+            <div class="profile-content">
                 <h2>About Me</h2>
-                <p>Hi! My name is Gregg and I am a PhD student at the University of British Columbia. I am interested in how the nervous system controls movement. I am working in the <a href="https://kin.educ.ubc.ca/research/neuro-mechanical/human-neurophysiology-lab/">human neurophysiology lab</a> and the <a href="https://kin.educ.ubc.ca/research/neuro-mechanical/perceptual-motor-dynamics-lab/">perceptual motor dynamics lab</a>.</p>
-                <p>My research focuses on sensorimotor control and learning, specifically, I am interested in how the brain processes and learns from sensory information. Check out my <a href="cv.html">CV</a> to learn more about my background and research!</p>
+                <p>Hi! My name is Gregg and I am a PhD student at the University of British Columbia. My research focuses on proprioception, and how proprioceptive feedback is used in both motor control and perception of limb position. Specifcially, I am interested in how proprioceptive feedback loops allow for the smooth control of movement. I also have a broad interest in motor control and motor learning.</p>
             </div>
         </section>
 
