--- a/cv.html
+++ b/cv.html
@@ -177,6 +177,10 @@
     <footer>
         <div class="container">
             <div class="footer-content">
+                <div class="footer-about">
+                    <h3>Gregg Eschelmuller</h3>
+                    <p>Researcher at UBC investigating human movement and proprioception..</p>
+                </div>
                 <div class="contact-info">
                     <h3>Contact Information</h3>
                     <p><strong>Email:</strong> <a href="mailto:gregg.eschelmuller@ubc.ca">gregg.eschelmuller@ubc.ca</a></p>
@@ -193,9 +197,14 @@
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor"><path d="M21.328 2.002v9.2M8.695 7.85c.014-.787-.11-2.236.28-2.89c.424-.71 1.26-1.01 1.98-1.18c.604-.143 1.076.223 1.47.6c.716.69.896 1.8.967 2.764c.107 1.45.176 2.908.13 4.36c-.05 1.52-.143 3.044-.224 4.564l-.004.063l1.7-3.32c1.24-2.275 2.5-4.54 3.71-6.832c.096-.082.057.124.07.18c.09 2.818.186 5.636.27 8.455c.032 1.052.047 2.108.118 3.158c.1 1.184.223 2.492.553 3.64c.414 1.44 1.24 2.425 2.778 2.596c.578.063 1.167-.02 1.738-.134"></path><path d="M5.34 16.66c-.277 1.034-.77 2.864-.832 3.11c-.054.304-.05.62-.034.928c.034.57.152 1.14.27 1.698c.26 1.158.752 2.29 1.475 3.236c.247.32.536.6.834.88M11.74 19.13c.233-.367.44-.747.626-1.143c.85-1.816 1.13-3.832 1.03-5.812c-.082-1.67-.39-3.358-1.006-4.915c-.415-1.052-.963-2.06-1.61-2.994c-.526-.747-1.116-1.448-1.762-2.095c-.714-.74-1.505-1.4-2.3-2.05c-.82-.688-1.64-1.378-2.463-2.063"></path></svg>
                             Google Scholar
                         </a>
+                        <a href="https://www.linkedin.com/in/your-profile" target="_blank" rel="noopener noreferrer" class="social-icon linkedin">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="currentColor"><path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/></svg>
+                            LinkedIn
+                        </a>
                     </div>
                 </div>
             </div>
+
         </div>
     </footer>
 
