--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <div class="footer-content">
                 <div class="footer-about">
                     <h3>Gregg Eschelmuller</h3>
-                    <p>Researcher at UBC exploring the mysteries of human movement and proprioception.</p>
+                    <p>Researcher at UBC investigating human movement and proprioception..</p>
                 </div>
                 <div class="contact-info">
                     <h3>Contact Information</h3>
@@ -150,9 +150,7 @@
                     </div>
                 </div>
             </div>
-            <div class="footer-bottom">
-                <p>&copy; 2023 Gregg Eschelmuller. All rights reserved.</p>
-            </div>
+
         </div>
     </footer>
     <script src="js/theme.js"></script>
