--- a/cv.html
+++ b/cv.html
@@ -71,12 +71,16 @@
                 <li><strong>Eschelmuller, G.</strong>, Mildren, R. L., Blouin, J.-S., Carpenter, M. G., & Inglis, J. T. (2020). Frequency characteristics of heteronymous responses evoked by Achilles tendon vibration during quiet stance. Neuroscience Letters, 736, 135290. <a href="https://doi.org/10.1016/j.neulet.2020.135290">https://doi.org/10.1016/j.neulet.2020.135290</a></li>
                 <li>Mildren, R. L., Schmidt, M. E., <strong>Eschelmuller, G.</strong>, Carpenter, M. G., Blouin, J., & Inglis, J. T. (2020). Influence of age on the frequency characteristics of the soleus muscle response to Achilles tendon vibration during standing. The Journal of Physiology, 598(22), 5231-5243. <a href="https://doi.org/10.1113/jp280324">https://doi.org/10.1113/jp280324</a></li>
             </ul>
-            
+
+            <h3>Journal Articles - In Review/Preprints</h3>
+            <ul class="publications-list">
+                <li><strong>Eschelmuller, G.,</strong> Kim, H., Inglis, J.T., Chua, R., (2025). Dual agonist and antagonist muscle vibration produces a bias in end point with  no change in variability. bioRxiv 2025.03.03.641240; doi: <a href="https://doi.org/10.1101/2025.03.03.641240">https://doi.org/10.1101/2025.03.03.641240</a></li>
+            </ul>
             <h3>Journal Articles - In Preparation</h3>
             <ul class="publications-list">
                 <li><strong>Eschelmuller, G</strong>., Szarka, A., Inglis, J. Timothy., Chua, R., (in preparation). Investigating explicit and implicit sensorimotor adaptation in a bimanual aiming task.</li>
                 <li><strong>Eschelmuller, G</strong>., Szarka, A., Gandossi, B., Inglis, J. Timothy., Chua, R., (in preparation). Agonist/antagonist muscle tendon vibration improves performance in a visual-proprioceptive discrimination task during active but not passive movements.</li>
-                <li><strong>Eschelmuller, G.,</strong> Kim, H., Inglis, J.T., Chua, R., (in preparation). Dual agonist/antagonist produce biased end point with no change in variability in a kinesthetic targeting task. A manuscript to be submitted for publication in a peer-reviewed journal.</li>
+
                 <li><strong>Eschelmuller, G.,</strong> Zhang, J., Kim, H., Inglis, J.T., Chua, R., (in preparation). Kinesthetic Illusions induced through tendon vibration depend on the reliability of the proprioceptive feedback. A manuscript to be submitted for publication in a peer-reviewed journal.</li>
             </ul>
         </section>
