--- a/cv.html
+++ b/cv.html
@@ -81,7 +81,7 @@
                 <li><strong>Eschelmuller, G</strong>., Szarka, A., Inglis, J. Timothy., Chua, R., (in preparation). Investigating explicit and implicit sensorimotor adaptation in a bimanual aiming task.</li>
                 <li><strong>Eschelmuller, G</strong>., Szarka, A., Gandossi, B., Inglis, J. Timothy., Chua, R., (in preparation). Agonist/antagonist muscle tendon vibration improves performance in a visual-proprioceptive discrimination task during active but not passive movements.</li>
 
-                <li><strong>Eschelmuller, G.,</strong> Zhang, J., Kim, H., Inglis, J.T., Chua, R., (in preparation). Kinesthetic Illusions induced through tendon vibration depend on the reliability of the proprioceptive feedback. A manuscript to be submitted for publication in a peer-reviewed journal.</li>
+                <li><strong>Eschelmuller, G.,</strong> Zhang, J., Kim, H., Inglis, J.T., Chua, R., (in preparation). Kinesthetic Illusions induced through tendon vibration depend on the reliability of the proprioceptive feedback.</li>
             </ul>
         </section>
 
