--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         <span class="interest-icon">🧠</span>
                         <h3>Proprioception</h3>
                     </div>
-                    <p>Studying how the body perceives its position and movement in space.</p>
+                    <p>Studying how the brain knows where the body is in space.</p>
                 </a>
                 <a href="research.html#motor-control" class="interest-card">
                     <div class="interest-header">
@@ -110,11 +110,13 @@
                 <button class="filter-btn" data-filter="co-author">Co-Author</button>
             </div>
             <ul class="publication-list">
+                <li data-type="first-author"><strong>Eschelmuller, G.</strong> Inglis, J.T., Kim, H., Chua, R., (2025). Dual agonist and antagonist muscle vibration produces a bias in end point with no change in variability. Journal of Neurophysiology, 134(1), 2025-2037. <a href="https://doi.org/10.1101/2025.03.03.641240" class="pub-link">https://doi.org/10.1101/2025.03.03.641240</a></li>
                 <li data-type="first-author"><strong>Eschelmuller, G</strong>., Szarka, A., Gandossi, B., Inglis, J. T., & Chua, R. (2023). The effects of periodic and noisy tendon vibration on a kinesthetic targeting task. Experimental Brain Research. <a href="https://doi.org/10.1007/s00221-023-06727-1" class="pub-link">https://doi.org/10.1007/s00221-023-06727-1</a></li>
                 <li data-type="co-author">Grose, G., Manzone, D., <strong>Eschelmuller, G.,</strong> Peters, R., Carpenter, M.G.., Inglis, J.T., Chua, R. The effects of eccentric exercise-induced fatigue on position sense during goal-directed movement., In press Journal of Applied Physiology, <a href="https://doi.org/10.1152/japplphysiol.00177.2021" class="pub-link">https://doi.org/10.1152/japplphysiol.00177.2021</a></li>
                 <li data-type="first-author"><strong>Eschelmuller, G.,</strong> Chua, R., Carpenter, M. G., & Inglis, J. T. (2021). The acute effects of periodic and noisy tendon vibration on wrist muscle stretch responses. Neuroscience Letters, 764, 136279. <a href="https://doi.org/10.1016/j.neulet.2021.136279" class="pub-link">https://doi.org/10.1016/j.neulet.2021.136279</a></li>
                 <li data-type="first-author"><strong>Eschelmuller, G.</strong>, Mildren, R. L., Blouin, J.-S., Carpenter, M. G., & Inglis, J. T. (2020). Frequency characteristics of heteronymous responses evoked by Achilles tendon vibration during quiet stance. Neuroscience Letters, 736, 135290. <a href="https://doi.org/10.1016/j.neulet.2020.135290" class="pub-link">https://doi.org/10.1016/j.neulet.2020.135290</a></li>
                 <li data-type="co-author">Mildren, R. L., Schmidt, M. E., <strong>Eschelmuller, G.,</strong> Carpenter, M. G., Blouin, J., & Inglis, J. T. (2020). Influence of age on the frequency characteristics of the soleus muscle response to Achilles tendon vibration during standing. The Journal of Physiology, 598(22), 5231-5243. <a href="https://doi.org/10.1113/jp280324" class="pub-link">https://doi.org/10.1113/jp280324</a></li>
+                
             </ul>
             <a href="cv.html" class="btn btn-secondary">View All Publications</a>
         </section>
